--- a/проект/index.html
+++ b/проект/index.html
@@ -14,8 +14,20 @@
         <h2>популярное</h2>
     </div>
     <div class="films">
-        <div id="film1">
+        <div id="films">
             <h2>оно</h2>
+            <image>здесь был фильм</image>
+        </div>
+    </div>
+    <div class="films">
+        <div id="films">
+            <h2>фнаф</h2>
+            <image>здесь был фильм</image>
+        </div>
+    </div>
+    <div class="films">
+        <div id="films">
+            <h2>мстители</h2>
             <image>здесь был фильм</image>
         </div>
     </div>
