--- a/проект/index.html
+++ b/проект/index.html
@@ -7,28 +7,40 @@
 </head>
 <body>
     <header>
-        <h1 id="logo">Movie Review</h1>
-        <image ></image>
+        <h1 id="logo">Movie Review
+        <img id="logo_img" src="images\icons8-меню-48 1.png" ></img>
+        </h1>
     </header>
-    <div class="name_page">
-        <h2>популярное</h2>
-    </div>
-    <div class="films">
-        <div id="films">
-            <h2>оно</h2>
-            <image>здесь был фильм</image>
-        </div>
-    </div>
-    <div class="films">
-        <div id="films">
-            <h2>фнаф</h2>
-            <image>здесь был фильм</image>
-        </div>
-    </div>
-    <div class="films">
-        <div id="films">
-            <h2>мстители</h2>
-            <image>здесь был фильм</image>
+    <div class="wraper">
+        <div class="content">
+            <div class="name_page">
+                <h2>популярное</h2>
+            </div>
+            <div class="films">
+                <div id="films">
+                    <h2>оно</h2>
+                    <img src="images\1634576000_6-papik-pro-p-ono-poster-6 1.png">здесь был фильм</img>
+                </div>
+            </div>
+            <div class="films">
+                <div id="films">
+                    <h2>фнаф</h2>
+                    <img src="images\fivenightsatfreddys_4.png">здесь был фильм</img>
+                </div>
+            </div>
+            <div class="films">
+                <div id="films">
+                    <h2>мстители</h2>
+                    <img src="images\mstiteli-1.png">здесь был фильм</img>
+                </div>
+                <div class="films">
+                    <div id="films">
+                        <a href="index2.html">
+                        <h2>мстители война бесконечности</h2>
+                        <img src="images\voyna-beskonechnosti.png">здесь был фильм</img>
+                        </a>
+                    </div>
+            </div>
         </div>
     </div>
     <footer>
